Fix text of any non-first table action is not readable
Fixed eg CustomAlerts, and Tag Manager versions buttons text not visible

--- a/plugins/CoreHome/stylesheets/dataTable/_entityTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_entityTable.less
@@ -104,7 +104,7 @@ table.entityTable {
     line-height: 36px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12) !important;
     background-color: @color-silver-l60;
-    color: @theme-color-brand-contrast;
+    color: @theme-color-text;
     background-image: none !important;
     font-size: 12px;
     cursor: pointer;
@@ -128,5 +128,6 @@ table.entityTable {
 
   button:first-child, a:first-child {
     background-color: @theme-color-brand !important;
+    color: @color-white;
   }
 }
